--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,45 @@
-.App {
-  text-align: center;
+*, ::after, ::before {
+  padding: 0;
+  margin: 0;
+
+  color: black;
+  font-weight: 400;
+
+  overflow: hidden;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+html {
+  background-color: #FBFBFB;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
+main {
+  width: 100%;
 
-.App-header {
-  background-color: #282c34;
   min-height: 100vh;
+  height: auto;
+
+  margin: 0 auto;
+
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+nav {
+  width: 100%;
+  height: 80px;
+
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.navigation {
+  background-color: #fff;
+  border-bottom: 1px solid rgba(0, 0, 0, .25);
+  box-shadow: 0 8px 14px 0 rgba(0, 0, 0, .25);
+}
+
+.contianer-sized {
+  max-width: 1366px;
 }
