added SASS for this project

--- a/src/App.scss
+++ b/src/App.scss
@@ -3,13 +3,26 @@
   margin: 0;
 
   color: black;
-  font-weight: 400;
 
   overflow: hidden;
+
+  border-style: solid;
+  border-width: 0;
+  box-sizing: border-box;
+  clear: both;
 }
 
 html {
-  background-color: #FBFBFB;
+  /* background-color: #FBFBFB; */
+  background-color: rgba(0,0,0,.03);
+  box-sizing: border-box;
+
+  font-family: var(--font-family-sans-serif);
+  font-size: 14px;
+  font-weight: 400;
+
+  overflow-x: hidden;
+  overflow-y: scroll;
 }
 
 main {
@@ -28,17 +41,19 @@ main {
 nav {
   width: 100%;
   height: 80px;
-
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
 }
 
 .navigation {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
   background-color: #fff;
   border-bottom: 1px solid rgba(0, 0, 0, .25);
-  box-shadow: 0 8px 14px 0 rgba(0, 0, 0, .25);
 }
+
+/* .navigation:hover {
+  box-shadow: 0 8px 14px 0 rgba(0, 0, 0, .25);
+} */
 
 .contianer-sized {
   max-width: 1366px;
