--- a/src/Assets/sass/App.scss
+++ b/src/Assets/sass/App.scss
@@ -1,67 +1,10 @@
 @import "./psudo.scss";
 @import "./elements";
 
-.navigation {
-  max-width: 1366px;
-  width: inherit;
-  height: inherit;
-}
-
-/* .navigation:hover {
-  box-shadow: 0 8px 14px 0 rgba(0, 0, 0, .25);
-} */
-
-.BrandArea {
-  display: inline-block;
-  height: inherit;
-  width: inherit;
-
-  padding: 20px 0;
-
-  & img {
-    height: auto;
-    width: auto;
-  }
-  
-  & a {
-    font-family: var(--font-family-sans-serif);
-    font-size: 30px;
-    font-weight: 800;
-    text-transform: uppercase;
-
-    display: flex;
-    flex-direction: row;
-    justify-content: flex-start;
-    align-items: center;
-  }
-}
+/* add dependencies for componenet base design */
+@import "./header-area.scss";
 
 
-.MenuArea ul, .navigation {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-}
-
-.MenuArea ul {
-  list-style: none;
-
-  &, & li {
-    display: flex;
-    flex-direction: row;
-    
-    margin-right: 20px;
-
-    & a {
-      padding: 20px 0;
-
-      font-size: 18px;
-      font-weight: 600;
-      width: auto;
-    }
-
-    &:last-child {
-      margin-right: 0;
-    }
-  }
+footer {
+  text-align: center;
 }
