Update color, navigations

--- a/src/Assets/sass/psudo.scss
+++ b/src/Assets/sass/psudo.scss
@@ -13,6 +13,11 @@
 }
 
 :root {
+    /* height */
     --header-height: 80px;
-    --footer-height: 100px
+    --footer-height: 100px;
+
+    /* colors */
+    --header-bg-color: #F5F5F5;
+    --body-bg-color:#E4E4E4;
 }
