--- a/src/Assets/sass/elements.scss
+++ b/src/Assets/sass/elements.scss
@@ -1,6 +1,6 @@
 
 html {
-  background-color: rgba(0,0,0,.05);
+  background-color: var(--body-bg-color);
   box-sizing: border-box;
 
   font-family: var(--font-family-sans-serif);
@@ -33,8 +33,8 @@ header {
   flex-direction: column;
   align-items: center;
   
-  background-color: #fff;
-  border-bottom: 1px solid rgba(0, 0, 0, .25);
+  background-color: var(--header-bg-color);
+  border-bottom: 1px solid var(--body-bg-color);
 }
 
 
