Added clear concept

--- a/src/Assets/sass/psudo.scss
+++ b/src/Assets/sass/psudo.scss
@@ -21,4 +21,6 @@
     --header-bg-color: #F5F5F5;
     --body-bg-color:#E4E4E4;
     --brand-color: #0577cc;
+    --menu-text-color: #666666;
+    --fallback-text-color:#fff;
 }
