Update with container

--- a/src/Assets/sass/elements.scss
+++ b/src/Assets/sass/elements.scss
@@ -33,6 +33,7 @@ header {
   
   background-color: var(--header-bg-color);
   border-bottom: 1px solid var(--body-bg-color);
+  box-shadow: 0px 16px 27px -9px rgb(0 0 0 / 2%);
 }
 
 
