--- a/src/Assets/sass/psudo.scss
+++ b/src/Assets/sass/psudo.scss
@@ -13,6 +13,11 @@
 }
 
 :root {
+    /* font family */
+    --font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+    sans-serif;
+
     /* height */
     --header-height: 80px;
     --footer-height: 100px;
