--- a/src/Assets/sass/header-area.scss
+++ b/src/Assets/sass/header-area.scss
@@ -42,9 +42,13 @@
       width: auto;
 
       font-size: 16px;
-      font-weight: 700;
+      font-weight: 600;
 
       text-transform: capitalize;
+
+      &:focus {
+        font-weight: 700;
+      }
 
       &:hover, &:active, &:focus {
         /* added brand color */
