--- a/src/Assets/sass/header-area.scss
+++ b/src/Assets/sass/header-area.scss
@@ -52,9 +52,9 @@
 
       text-transform: capitalize;
 
-      &:focus {
+      /* &:focus {
         font-weight: 700;
-      }
+      } */
 
       &:hover, &:active, &:focus {
         /* added brand color */
