--- a/src/Assets/sass/header-area.scss
+++ b/src/Assets/sass/header-area.scss
@@ -51,6 +51,7 @@
       font-weight: 600;
 
       text-transform: capitalize;
+      border-bottom: 2px solid rgba(0,0,0,0);
 
       /* &:focus {
         font-weight: 700;
