--- a/src/Assets/sass/psudo.scss
+++ b/src/Assets/sass/psudo.scss
@@ -11,23 +11,23 @@
   box-sizing: border-box;
   clear: both;
 
-  transition: ease 300 ms;
+  //transition: ease 300ms;
 }
 
 :root {
-    /* font family */
-    --font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  /* font family */
+  --font-family-sans-serif: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+  'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  sans-serif;
 
-    /* height */
-    --header-height: 80px;
-    --footer-height: 100px;
+  /* height */
+  --header-height: 80px;
+  --footer-height: 100px;
 
-    /* colors */
-    --header-bg-color: #F5F5F5;
-    --body-bg-color:#E4E4E4;
-    --brand-color: #0577cc;
-    --menu-text-color: #666666;
-    --fallback-text-color:#fff;
+  /* colors */
+  --header-bg-color: #F5F5F5;
+  --body-bg-color: #E4E4E4;
+  --brand-color: #0577cc;
+  --menu-text-color: #666666;
+  --fallback-text-color: #fff;
 }
